# minicli

./: CLI.ml  CLI.mli  Makefile  README.md  build.sh  dune  minicli.opam  opam  ref.txt  regr_test.sh  test.ml  test.sh
